--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -1,21 +1,106 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <meta charset="UTF-8">
-    <title>Primeiro Template</title>
+    <title>Página Inicial</title>
 </head>
 <body>
-    <h2>Lista de Posts Cadastrados </h2>
-    <ul>
-    {% for post in posts %}
-    <li>
-        <a href="{% url 'post_detail' post.id %}">{{ post.titulo}} - {{post.autor}}</a>
-    </li>
-    {% endfor %}
-    </ul>
 
-    {% load static %}
-    <img src="{% static 'blog/Imagem.jpg'%}">
+<header class="bg-dark my-2 ">
 
+    <nav class="navbar navbar-dark navbar-expand-lg bg-black">
+
+
+        <div class="container-fluid">
+
+            <a class="navbar-brand" href="#">Academia Python</a>
+
+            <button class="navbar-toggler"
+                    type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent"
+                    aria-controls="navbarSupportedContent"
+                    aria-expanded="false"
+                    aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="#">Blog</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Cursos</a>
+                    </li>
+
+                     <li class="nav-item">
+                        <a class="nav-link" href="#">Contato</a>
+                    </li>
+
+
+                    <li class="nav-item">
+                        <a class="nav-link"href="#">Login</a>
+                    </li>
+                </ul>
+
+                <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Search"
+                           aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
+            </div>
+        </div>
+    </nav>
+
+    </div>
+    </div>
+    </div>
+</header>
+
+<main class="bg-light">
+    <div class="container-fluid">
+        <div class="row justify-content-center">
+            <div class="col-8 bg-success">
+                CONTEUDO AQUI
+            </div>
+        </div>
+    </div>
+</main>
+
+<footer class="bg-dark py-4 my-2">
+    <div class="container-fluid text-white">
+
+        <div class="row justify-content-center">
+            <div class="col-2 text-left">
+                <h5 class="text-uppercase fw-bold text-info">Quem somos?</h5>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                </p>
+            </div>
+
+            <div class="col-4 text-left">
+                <h5 class="text-uppercase fw-bold text-info">Onde queremos chegar?</h5>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium delectus dolore doloremque expedita illo inventore quasi quia repudiandae tempora veniam! Amet asperiores consequuntur dignissimos dolores laborum, possimus praesentium quod suscipit.</p>
+            </div>
+
+            <div class="col-2 text-left">
+                <h5 class="text-uppercase fw-bold text-info">Siga-nos nas redes</h5>
+
+                <p>YouTube</p>
+
+                <p>Github</p>
+
+            </div>
+        </div>
+
+    </div>
+
+</footer>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
 </body>
 </html>
