--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
+{%load static %}
 <html lang="pt-br">
 <head>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+
     <meta charset="UTF-8">
     <title>Página Inicial</title>
 </head>
@@ -36,13 +41,13 @@
                         <a class="nav-link" href="#">Cursos</a>
                     </li>
 
-                     <li class="nav-item">
+                    <li class="nav-item">
                         <a class="nav-link" href="#">Contato</a>
                     </li>
 
 
                     <li class="nav-item">
-                        <a class="nav-link"href="#">Login</a>
+                        <a class="nav-link" href="#">Login</a>
                     </li>
                 </ul>
 
@@ -54,23 +59,72 @@
             </div>
         </div>
     </nav>
-
-    </div>
-    </div>
-    </div>
 </header>
 
 <main class="bg-light">
     <div class="container-fluid">
         <div class="row justify-content-center">
-            <div class="col-8 bg-success">
-                CONTEUDO AQUI
+
+            <div class="col-8">
+
+                <div class="row">
+
+                    <div class="col-8">
+                        << !-- Configuração da imagem-ç9 -- >>
+
+                        <div class="card">
+                            <img src="{% static 'blog/django-livre-1.jpg' %}" class="card-img-top" alt="imagem do card">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae
+                                    corporis distinctio doloremque fuga maiores neque omnis quod quos sunt vel. Adipisci
+                                    aspernatur illo iusto maiores molestiae nulla placeat rem veritatis.</p>
+
+                                <p class="card-text">
+                                    <small class="text-muted">Publicado em 21/12/2012</small>
+                                </p>
+
+                            </div>
+                        </div>
+
+                    </div>
+                    <!- Configuração da parte do questionário->
+                    <div class="col-4">
+                        <div class="card">
+
+                            <img src="{% static 'blog/snipet-01.png' %}" class="card-img-top" alt="texto-questao">
+
+                            <div class="card-body">
+
+                                <div class="form-check">
+
+                                    <div class="card">
+                                        <ul class="list-group list-group-flush">
+                                            {% for i in 'ABCDE' %}
+                                            <div class="list-group-item"><input class="form-check-input"
+                                                                                type="radio"
+                                                                                name="flexRadioDefault"
+                                                                                id="flexRadioDefault1">
+                                                <label class="form-check-label"
+                                                       for="flexRadioDefault1">
+                                                    Alternativa {{i}}
+                                                </label>
+                                            </div>
+                                            {% endfor %}
+                                        </ul>
+                                        <a href="#" class="btn btn-success">Responder</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 </main>
 
-<footer class="bg-dark py-4 my-2">
+<footer class="bg-black py-4 my-2">
     <div class="container-fluid text-white">
 
         <div class="row justify-content-center">
@@ -83,15 +137,21 @@
 
             <div class="col-4 text-left">
                 <h5 class="text-uppercase fw-bold text-info">Onde queremos chegar?</h5>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium delectus dolore doloremque expedita illo inventore quasi quia repudiandae tempora veniam! Amet asperiores consequuntur dignissimos dolores laborum, possimus praesentium quod suscipit.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium delectus dolore doloremque
+                    expedita illo inventore quasi quia repudiandae tempora veniam! Amet asperiores consequuntur
+                    dignissimos dolores laborum, possimus praesentium quod suscipit.</p>
             </div>
 
             <div class="col-2 text-left">
                 <h5 class="text-uppercase fw-bold text-info">Siga-nos nas redes</h5>
 
-                <p>YouTube</p>
+                <p>
+                    <i class="bi bi-youtube "></i>
+                    <a href="#" class="text-white" style="text-decoration:none;">Youtube</a>
+                </p>
+                <i class="bi bi-github"></i>
+                <a href="#" class="text-white" style="text-decoration:none">Github</a>
 
-                <p>Github</p>
 
             </div>
         </div>
