--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -7,6 +7,7 @@
           integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="{% static 'css/estilos.css' %}">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -154,10 +155,10 @@
                         <!- Configuração da imagem-ç9->
 
                         <div class="card vh-75 vw-100">
-                            <img src="{% static 'blog/django-livre-1.jpg' %}" class="card-img-top" alt="imagem do card">
+                            <img src="{{posts.0.image_capa.url}}" class="card-img-top" alt="imagem do card">
                             <div class="card-body">
                                 <h5 class="card-title">{{posts.0.titulo}}</h5>
-                                <p class="card-text">{{posts.0.conteudo|safe}}</p>
+                                <p class="card-text">{{posts.0.resumo|safe}}</p>
 
                                 <p class="card-text">
                                     <small class="text-muted">{{posts.0.data_publicacao}}</small>
@@ -213,18 +214,19 @@
 
 
                 <hr class="my-4">
-
+                <!--Configurando os posts recentes-->
                 <div class="row row-cols-1 row-cols-md-2 g-4">
-                    {% for i in '0123' %}
-                    <div class="col">
-                        <div class="card">
-                            <img src="{% static 'blog/django-02.jpg' %}" class="card-img-top" alt="...">
+                    {% for post in posts|slice:"1:5" %}
+                        <div class="col d-flex">
+                        <div class="card vh-75 vw-100">
+                            <img src=" {{post.image_capa.url }}"
+                                 class="card-img-top img-300 "
+                                 alt="Imagem capa">
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">This is a longer card with supporting text below as a natural
-                                    lead-in to additional content. This content is a little bit longer.</p>
+                                <h5 class="card-title">{{post.titulo}}</h5>
+                                <p class="card-text">{{post.resumo|slice:"250"|safe}}.</p>
                             </div>
-                        </div>
+                            </div>
                     </div>
                     {%endfor%}
 
