--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,16 +1,54 @@
 <!DOCTYPE html>
+{%load static%}
 <html lang="pt-br">
 <head>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="{% static 'CSS/estilos.css' %}">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <meta charset="UTF-8">
-    <title>Post Detail</title>
+    <title>{{ post.titulo }}</title>
 </head>
 <body>
-<h1>{{post.titulo}}</h1>
-<h3>{{post.subtitulo}}</h3>
+<div class="container-fluid bg-dark mb-2">
+    <div class="row justify-content-center">
+        <div class="col-xl-8">
+            <header class="bg-dark my-2 ">
 
-<p>
-    {{post.conteudo|safe}}
-</p>
+                {% include 'fragments/navbar.html'%}
 
+            </header>
+        </div>
+    </div>
+</div>
+
+    <main class="bg-light">
+        <div class="container-fluid">
+            <div class="row justify-content-center">
+                <div class="col-xl-8">
+
+                    <hr class="my-5">
+                    <h1>{{ post.titulo }}</h1>
+
+                       <hr class="my-5">
+
+                    <article class="fs-3 px-5 mx-2">
+                        {{post.conteudo|safe}}
+                    </article>
+                </div>
+            </div>
+        </div>
+    </main>
+    <footer>
+        {% include 'fragments/footer.html' %}
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+            crossorigin="anonymous"></script>
 </body>
 </html>
