--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -7,7 +7,7 @@
           integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="{% static 'CSS/estilos.css' %}">
+    <link rel="stylesheet" href="{% static 'css/estilos.css' %}">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -43,7 +43,9 @@
                             <a href="{% url 'post_detail' posts.0.id %}">
                                 <img src="{{posts.0.image_capa.url}}" class="card-img-top" alt="imagem do card"></a>
                             <div class="card-body pb-4">
-                                <a href="{%url 'post_detail' posts.0.id%}"><h4 class="card-title">{{posts.0.titulo}}</h4></a>
+                                <a href="{%url 'post_detail' posts.0.id%}" class="text-decoration-none text-dark">
+                                    <h4 class="card-title">{{posts.0.titulo}}</h4>
+                                </a>
                                 <p class="card-text">{{posts.0.resumo|safe}}</p>
 
                                 <p class="card-text">
@@ -129,7 +131,7 @@
                                              alt="Imagem capa"></a>
 
                             <div class="card-body">
-                                <a href="{% url 'post_detail' post.id %}"><h5 class="card-title">{{post.titulo}}</h5></a>
+                                <a href="{% url 'post_detail' post.id %}" class="text-decoration-none text-dark"><h5 class="card-title">{{post.titulo}}</h5></a>
                                 <p class="card-text">{{post.resumo|slice:"250"|safe}}.</p>
                             </div>
                             <!--Incluindo botões-->
@@ -137,7 +139,8 @@
                                 <div class="col-12">
                                     <div class="d-flex justify-content-center">
                                         <div class="span btn me-3">
-                                            <i class="bi bi-heart-fill">Curtir</i>
+
+                                            <i class="bi bi-heart-fill" style="font-size:2rem";>Curtir</i>
                                         </div>
                                         <div class="span btn me-3">
                                             <i class="bi bi-chat-fill">Comentar</i>
@@ -147,6 +150,7 @@
                                             <i class="bi bi-share-fill">Compartilhar</i>
 
                                         </div>
+
                                     </div>
                                 </div>
                             </div>
