--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -7,7 +7,7 @@
           integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="{% static 'CSS/estilos.css' %}">
+    <link rel="stylesheet" href="{% static 'css/estilos.css' %}">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -27,28 +27,149 @@
     </div>
 </div>
 
-    <main class="bg-light">
-        <div class="container-fluid">
-            <div class="row justify-content-center">
-                <div class="col-xl-8">
+<main class="bg-light">
+    <div class="container-fluid">
+        <div class="row justify-content-center">
+            <div class="col-xl-8 border-start border-end">
 
-                    <hr class="my-5">
-                    <h1>{{ post.titulo }}</h1>
+                <hr class="my-5">
 
-                       <hr class="my-5">
+                <!--Configurando ícones rede sociais-->
+                <div class="container-fluid">
+                    <div class="flex-row d-flex my-2">
+                        <h1>{{ post.titulo }}</h1>
 
-                    <article class="fs-3 px-5 mx-2">
-                        {{post.conteudo|safe}}
-                    </article>
+                        <a href="#" class="text-decoration-none text-dark">
+                            <span class="d-flex justify-content-center align-items-center">
+                            <span class="ms-5"
+                                  data-bs-toggle="tooltip border"
+                                  data-bs-placement="top"
+                                  title="Compartilhar no instagram">
+                            <i class="bi bi-instagram" style="font-size: 2rem;"></i>
+                            </span>
+                        </span>
+                        </a>
+
+                        <a href="#" class="text-decoration-none text-dark">
+                            <span class="d-flex justify-content-center align-items-center">
+                            <span class="ms-5"
+                                  data-bs-toggle="tooltip border"
+                                  data-bs-placement="top"
+                                  title="Compartilhar no facebook">
+                            <i class="bi bi-facebook" style="font-size: 2rem;"></i>
+                            </span>
+                        </span>
+                        </a>
+
+                        <a href="#" class="text-decoration-none text-dark">
+                            <span class="d-flex justify-content-center align-items-center">
+                            <span class="ms-5"
+                                  data-bs-toggle="tooltip border"
+                                  data-bs-placement="top"
+                                  title="Compartilhar no Twitter">
+                            <i class="bi bi-twitter" style="font-size: 2rem;"></i>
+                            </span>
+                        </span>
+                        </a>
+
+                        <a href="#" class="text-decoration-none text-dark">
+                            <span class="d-flex justify-content-center align-items-center">
+                            <span class="ms-5"
+                                  data-bs-toggle="tooltip border"
+                                  data-bs-placement="top"
+                                  title="Compartilhar link">
+                            <i class="bi bi-link" style="font-size: 2rem;"></i>
+                            </span>
+                        </span>
+                        </a>
+
+                    </div>
+                </div>
+
+
+                <div class="row">
+                    <div class="col-12">
+                        <div class="d-flex flex-row align-items-center">
+                            <div class="rounded-circle border d-flex justify-content-center
+                            align-items-center bg-info avatar">
+                                <!--Inserir imagem aqui-->
+                            </div>
+                            <p class="mb-0">
+                                <span class="text-muted justify-content-center">
+                                    <span class="h5 mx-2">
+                                        {{post.autor}}
+                                    </span>
+
+                                    <span>
+                                        <i class="bi bi-clock-fill"></i>
+                                        <span>
+                                            30min
+                                        </span>
+                                    </span>
+
+                                    <br>
+                                    <span class="mx-2">
+                                        <i class="bi bi-tags-fill"></i>
+                                    </span>
+                                    <span>
+                                        <a href="#" class="text-decoration-none text-muted">#Básico</a>
+                                    </span>
+
+                                    <span>
+                                        <a href="#" class="text-decoration-none text-muted">#Python</a>
+                                    </span>
+                                    <br>
+                                    <span class="mx-2">
+                                        {{post.subtitulo}}
+                                    </span>
+
+
+
+                                </span>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <hr class="my-5">
+
+
+                <article class="fs-3 px-5 mx-2">
+                    {{post.conteudo|safe}}
+                </article>
+
+                <hr class="my-5">
+
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-12 ">
+                            <div class="d-flex justify-content-start">
+                                <div class="span btn me-3">
+                                    <i class="bi bi-heart-fill" style="font-size:2rem;" >Curtir</i>
+                                </div>
+                                <div class="span btn me-3">
+                                    <i class="bi bi-chat-fill" style="font-size:2rem;">Comentar</i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-    </main>
-    <footer>
-        {% include 'fragments/footer.html' %}
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-            crossorigin="anonymous"></script>
+    </div>
+</main>
+<footer>
+    {% include 'fragments/footer.html' %}
+</footer>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+        integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
+        integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
+        crossorigin="anonymous"></script>
 </body>
 </html>
