--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -134,7 +134,7 @@
                 <hr class="my-5">
 
 
-                <article class="fs-3 px-5 mx-2">
+                <article class="fs-4 px-lg-5 mx-lg-2">
                     {{post.conteudo|safe}}
                 </article>
 
