Commit- Criação página de login

--- a/blog/templates/fragments/carousel.html
+++ b/blog/templates/fragments/carousel.html
@@ -33,7 +33,7 @@
                                     <rect width="100%" height="100%" fill="#198754"/>
                                 </svg>
                                 <div class="carousel-caption d-none d-md-block">
-                                    <h5>Siga-ns nas mídias
+                                    <h5>Siga-nos nas mídias
                                         sociais.</h5>
                                     <p>Conheça nosso canal do Youtube e receba dicas, tutoriais gratuitos e fique por
                                         dentro
