--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -140,7 +140,7 @@
                                     <div class="d-flex justify-content-center">
                                         <div class="span btn me-3">
 
-                                            <i class="bi bi-heart-fill" style="font-size:2rem";>Curtir</i>
+                                            <i class="bi bi-heart-fill">Curtir</i>
                                         </div>
                                         <div class="span btn me-3">
                                             <i class="bi bi-chat-fill">Comentar</i>
