--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -143,7 +143,7 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-12 ">
-                            <div class="d-flex justify-content-start">
+                            <div class="d-flex justify-content-md-start justify-content-sm-center">
                                 <div class="span btn me-3">
                                     <i class="bi bi-heart-fill" style="font-size:2rem;" >Curtir</i>
                                 </div>
