--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -127,7 +127,7 @@
                     <div class="col d-flex">
                         <div class="card vh-75 vw-100 pb-3">
                             <a href="{% url 'post_detail' post.id %}"><img src=" {{post.image_capa.url }}"
-                                             class="card-img-top img-300 "
+                                             class="card-img-top"style="height:400px"
                                              alt="Imagem capa"></a>
 
                             <div class="card-body">
