Commit- 1.Iniciando a validação de dados

--- a/exemplos/templates/exemplos/16_forms_parte_i.html
+++ b/exemplos/templates/exemplos/16_forms_parte_i.html
@@ -38,7 +38,10 @@
                                           placeholder="Digite aqui o seu email"
                                           class="form-control"
                                           required
-                                          maxlength="100">
+                                          maxlength="100"
+                                          value="{{ email }}">
+
+
                                 </div>
 
                                 <div class="for-group mt-3">
@@ -48,7 +51,8 @@
                                            placeholder="Digite aqui a sua senha"
                                            class="form-control"
                                             required
-                                            maxlength="20">
+                                            maxlength="20"
+                                            value="{{ senha }}">
                                     <div class="card-footer ps-0 pt-3">
                                         <button type="submit" class="btn btn-primary">Cadastrar</button>
                                     </div>
