--- a/contato/templates/contato/contato.html
+++ b/contato/templates/contato/contato.html
@@ -19,13 +19,39 @@
         </div>
     </div>
 </div>
-<h1>Contato</h1>
 <main class="bg-light">
     <div class="container-fluid">
         <div class="row justify-content-center">
+            <div class="col-xl-5 col-md-6">
+                <!--Formulário-->
+                <form method="post" action="{% url 'mensagem' %}">
+                    <!--Para maior segurança-->
+                    {% csrf_token %}
+                    <div class="card border-0 px-sm-0 p-md-5 mt-3">
+                        {% if messages %}
+                            {% for message in messages %}
+                                {% if message.tags %}
+                                    <div class="alert alert-success" role="alert">
+                                        {{ message }}
+                                    </div>
+                                {% endif %}
+                        {% endfor %}
+                        {% endif %}
 
-            <div class="col-xl-8">
+
+                        <div class="card-head bg-white border-0">
+                            <h1 class="text-success text-center">Contato</h1>
+                        </div>
+
+                        {{ form }}
+
+                        <div class="card-footer p-0 pt-3 bg-white border-0">
+                            <button type="submit" class="btn btn-success col-12">Enviar mensagem</button>
+                        </div>
+                    </div>
+                </form>
             </div>
+
         </div>
     </div>
 </main>
@@ -34,7 +60,7 @@
         crossorigin="anonymous"></script>
 
 <footer>
-    {% include 'fragments/footer.html' with var_position='fixed-bottom'%}
+    {% include 'fragments/footer.html'%}
 
 
 </footer>
